# conan-gsoap

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py  conanfile_base.py  conanfile_installer.py
src/: CMakeLists.txt  gsoap.cmake  soapcpp2.cmake  wsdl2h.cmake
test_package/: CMakeLists.txt  conanfile.py  example.cpp  soapC.cpp  soapH.h  soapStub.h  soapcalcProxy.cpp  soapcalcProxy.h
test_package_installer/: conanfile.py
